--- a/style.css
+++ b/style.css
@@ -10,40 +10,9 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Source Code Pro', monospace;
-  font-size: 10px;
+  font-size: 16px;
   color: #fff;
-  background-color: #452c63;
-}
-
-.top-bar {
-  background-color: #28184f;
-  color: #fff;
-  padding: 0px 0;
-  border-radius: 10px;
-}
-
-.top-bar-content {
-  max-width: 960px;
-  margin: 0 auto;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.navigation {
-  list-style: none;
-  display: flex;
-  gap: 20px;
-}
-
-.navigation li a {
-  color: #fff;
-  text-decoration: none;
-  transition: color 0.3s;
-}
-
-.navigation li a:hover {
-  color: #8b008b;
+  background-color: #150b21;
 }
 
 .content {
@@ -68,8 +37,8 @@ main {
   transition: transform 0.3s, box-shadow 0.3s;
   cursor: pointer;
   display: block;
-  width: 150px;
-  background-color: #7c478c;
+  width: 200px;
+  background-color: #2b1133;
   border-radius: 10px;
 }
 
